welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:6: error: not found: value BaisseBrosse
  BaisseBrosse;leveBrosse
  ^PatternPicture:10: error: type RED is not a member of object java.awt.Color
  avance;setCouleurBrosse(c:Color.RED);colorie;gauche;avance;gauche;avance;
                                  ^PatternPicture:10: error: not found: value c
  avance;setCouleurBrosse(c:Color.RED);colorie;gauche;avance;gauche;avance;
                          ^PatternPicture:11: error: type BLUE is not a member of object java.awt.Color
  colorie;gauche;avance;gauche;avance;avance;setCouleurBrosse(c:Color.BLUE);colorie  
                                                                      ^PatternPicture:11: error: not found: value c
  colorie;gauche;avance;gauche;avance;avance;setCouleurBrosse(c:Color.BLUE);colorie  
                                                              ^