welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
}


def colorie{
  BaisseBrosse;leveBrosse
}

def petitMotif{
  avance;setCouleurBrosse(c:Color.RED);colorie;gauche;avance;gauche;avance;
  colorie;gauche;avance;gauche;avance;avance;setCouleurBrosse(c:Color.BLUE);colorie  
}